WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120368
Better mutation and event assertions for descendant iterators
https://bugs.webkit.org/show_bug.cgi?id=120368
Summary
Better mutation and event assertions for descendant iterators
Antti Koivisto
Reported
2013-08-27 10:04:41 PDT
Safer, more convenient.
Attachments
patch
(6.60 KB, patch)
2013-08-27 10:15 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2013-08-27 10:15:28 PDT
Created
attachment 209784
[details]
patch
Antti Koivisto
Comment 2
2013-09-05 16:25:52 PDT
This was
http://trac.webkit.org/changeset/154700
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug