Better mutation and event assertions for descendant iterators https://bugs.webkit.org/show_bug.cgi?id=120368

Reviewed by Andreas Kling.

Add mutation assertions to all functions.
Drop the no-event-dispatch assertion when the iterator reaches the end. This reduces need for iterator scoping
just to avoid assertions.

* dom/ChildIterator.h:
(WebCore::::domTreeHasMutated):
(WebCore::::operator):
(WebCore::=):
* dom/DescendantIterator.h:
(WebCore::::domTreeHasMutated):
(WebCore::::operator):
(WebCore::=):
* dom/Document.cpp:
(WebCore::Document::childrenChanged):

    Make idiomatic.



Canonical link: https://commits.webkit.org/138343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154700 268f45cc-cd09-0410-ab3c-d52691b4dbfc